[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ZoomInput.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Zoom" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -881.0
margin_bottom = -570.0
rect_min_size = Vector2( 50, 30 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 143.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 8.0
margin_right = 45.0
margin_bottom = 22.0
text = "Zoom: "

[node name="ZoomOut" type="Button" parent="HBoxContainer"]
margin_left = 45.0
margin_right = 65.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextInput" type="LineEdit" parent="HBoxContainer"]
margin_left = 65.0
margin_right = 123.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="ZoomIn" type="Button" parent="HBoxContainer"]
margin_left = 123.0
margin_right = 143.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/ZoomOut" to="." method="_on_ZoomOut_pressed"]
[connection signal="text_entered" from="HBoxContainer/TextInput" to="." method="_on_TextInput_text_entered"]
[connection signal="pressed" from="HBoxContainer/ZoomIn" to="." method="_on_ZoomIn_pressed"]
